deploy/kubernetes/manifests/00-sock-shop-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop-hardened
  labels:
    istio-injection: enabled
