deploy/kubernetes/manifests/32-peer-authentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: sock-shop-hardened
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: sock-shop-hardened
spec:
  selector:
    matchLabels:
      name: front-end
  mtls:
    mode: PERMISSIVE
