deploy/kubernetes/manifests/09-front-end-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: front-end
  template:
    metadata:
      labels:
        name: front-end
    spec:
      serviceAccountName: front-end
      containers:
      - name: front-end
        image: ghcr.io/sidecuter/front-end:latest
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8079
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 300
          periodSeconds: 3
        volumeMounts:
        - name: spire-workload-api
          mountPath: /spiffe-workload-api
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 30
          periodSeconds: 3
      volumes:
        - name: spire-workload-api
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
      nodeSelector:
        beta.kubernetes.io/os: linux
