deploy/kubernetes/manifests/17-queue-master-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-master
  labels:
    name: queue-master
  namespace: sock-shop-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      name: queue-master
  template:
    metadata:
      labels:
        name: queue-master
    spec:
      serviceAccountName: queue-master
      containers:
      - name: queue-master
        image: weaveworksdemos/queue-master:0.3.1
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: spire-workload-api
          mountPath: /spiffe-workload-api
          readOnly: true
      volumes:
        - name: spire-workload-api
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
      nodeSelector:
        beta.kubernetes.io/os: linux
