deploy/kubernetes/manifests/08-catalogue-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
    appProtocol: tcp
  selector:
    name: catalogue-db
