deploy/kubernetes/manifests/10-front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: front-end
  namespace: sock-shop-hardened
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 30002
  selector:
    name: front-end
