deploy/kubernetes/manifests/14-orders-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: mongo
    port: 27017
    targetPort: 27017
    protocol: TCP
    appProtocol: tcp
  selector:
    name: orders-db
