deploy/kubernetes/manifests/22-session-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop-hardened
spec:
  ports:
    # the port that this service should serve on
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
    appProtocol: tcp
  selector:
    name: session-db
